--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
                 <li class="nav-item ms-2 hvr-grow-shadow">
                     <a class="nav-link" href="#">首页</a>
                 </li>
+                <li class="nav-item ms-2 hvr-grow-shadow">
+                    <a class="nav-link" href="https://github.com/StarDawn-VirtualSinger/">Github organization</a>
+                </li>
+                <li class="nav-item ms-2 hvr-grow-shadow">
+                    <a class="nav-link" href="https://pd.qq.com/s/8bzisyb61">QQ频道</a>
+                </li>
+                <li class="nav-item ms-2 hvr-grow-shadow">
+                    <a class="nav-link" href="https://download.stardawn.xyz/">下载中心</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -70,7 +79,7 @@
                     </h1>
                     <div class="about">
                         <i>启明星晓 StarDawn
-                            是一个公益性的虚拟歌手企划，旗下共有三位歌手：凝希、凝星、凝楚。我们希望她们像启明星，为虚拟歌手界的拂晓添上三点星光，为ai歌声合成的推广添上一缕微芒</i>
+                            是一个公益性的虚拟歌手企划，旗下共有三位歌手：凝希、凝星、凝楚。我们希望她们像启明星，为虚拟歌手界的拂晓添上三点星光，为AI歌声合成的推广添上一缕微芒</i>
                     </div>
                 </figcaption>
             </div>
