--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <span class="badge rounded-pill bg-secondary">音色柔和</span>
                         <span class="badge rounded-pill bg-secondary">数据质量高</span>
                         <br><br>
-                        <p>三姐妹中最小的妹妹，善良开朗，声音温柔可人
+                        <p>三姐妹中最小的妹妹，善良开朗，声音温柔可人，是目前三姐妹中完成最早，也是目前质量最高并且支持支持variance自动音高的声库
                             <br>
                             <b>CV:Dorothy</b>
                         </p>
