--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
     <nav class="navbar navbar-expand-md bg-light navbar-light fixed-top navbar-fixed-top" id="mainNav"
         data-bs-theme="dark">
         <img decoding="async" src="/favicon.ico" alt="Logo" style="margin-left: 50px; width: 35px;">
-        <a class="navbar-brand ms-2 hvr-grow-shadow ra-title" href="/" style="color: #50505c;">启明星晓StarDawn</a>
+        <a class="navbar-brand ms-2 ra-title" href="/" style="color: #50505c;">启明星晓StarDawn</a>
         <button class="navbar-toggler mx-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end me-4 ra-link" id="collapsibleNavbar">
             <ul class="navbar-nav">
-                <li class="nav-item ms-2 hvr-grow-shadow">
+                <li class="nav-item ms-2">
                     <a class="nav-link" href="#">首页</a>
                 </li>
-                <li class="nav-item ms-2 hvr-grow-shadow">
+                <li class="nav-item ms-2">
                     <a class="nav-link" href="https://github.com/StarDawn-VirtualSinger/">Github organization</a>
                 </li>
-                <li class="nav-item ms-2 hvr-grow-shadow">
+                <li class="nav-item ms-2">
                     <a class="nav-link" href="https://pd.qq.com/s/8bzisyb61">QQ频道</a>
                 </li>
-                <li class="nav-item ms-2 hvr-grow-shadow">
+                <li class="nav-item ms-2">
                     <a class="nav-link" href="https://download.stardawn.xyz/">下载中心</a>
                 </li>
             </ul>
