--- a/index.html
+++ b/index.html
@@ -149,4 +149,8 @@
             </div>
         </div>
     </div>
+    <div class="news bg-light">
+        <h2 class="news-title" style="text-align: center;color: #50505c;">新闻中心</h1>
+            <span>这里写点什么好呢......</span>
+    </div>
 </body>
