--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-dark navbar-light fixed-top navbar-fixed-top" id="mainNav"
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top navbar-fixed-top" id="mainNav"
         data-bs-theme="dark">
         <img decoding="async" src="/favicon.ico" alt="Logo" style="margin-left: 50px; width: 35px;">
         <a class="navbar-brand ms-2 ra-title" href="/" style="color: #f1f1f1;">启明星晓StarDawn</a>
@@ -153,11 +153,6 @@
             </div>
         </div>
     </div>
-<<<<<<< Updated upstream
-    <div class="news bg-light">
-        <h2 class="news-title" style="text-align: center;color: #50505c;">新闻中心</h2>
-            <span>这里写点什么好呢......</span>
-=======
     <div class="row">
         <div class="col">
             <div>
@@ -179,7 +174,7 @@
             <br>
             <div>
                 <h2 style="color: #f1f1f1; text-align:left;">
-                    更优质的数据集，更强<b>更出色</b>
+                    更优质的数据集，更色<b>更强</b>
                 </h2>
                 <p style="color: #f1f1f1; text-align:left;">
                     我们使用了<a href="https://wenet.org.cn/opencpop/" style="color: #f1f1f1">OpenCpop（公开的高质量国语歌声语料库）</a>数据集进行训练<br>
@@ -191,6 +186,5 @@
     <div class="news" style="background-color: #50505c">
         <h2 class="news-title" style="text-align: center;color: #f1f1f1;">新闻中心</h2>
             <span style="color: #f1f1f1">这里写点什么好呢......</span>
->>>>>>> Stashed changes
     </div>
 </body>
