--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <br>
             <div>
                 <h2 style="color: #f1f1f1; text-align:left;">
-                    更优质的数据集，更色<b>更强</b>
+                    更优质的数据集，<b>更色更强</b>
                 </h2>
                 <p style="color: #f1f1f1; text-align:left;">
                     我们使用了<a href="https://wenet.org.cn/opencpop/" style="color: #f1f1f1">OpenCpop（公开的高质量国语歌声语料库）</a>数据集进行训练<br>
