--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
         content="Python, C++, Windows, Linux, PyQt, html, css, 启明星晓,stardawn,vsinger,洛天依,言和,乐正绫,凝希,凝楚,凝星,虚拟歌手,五维介质，diffsinger,诗岸,苍穹,赤羽,星尘,海伊, Bilibili, 哔哩哔哩">
     <link rel="icon" href="/favicon.ico">
     <meta name="description" content="启明星晓 StarDawn 启明星晓 StarDawn 是一个全新的公益性虚拟歌手企划，旗下共有三位歌手：凝希、凝星、凝楚。我们希望三姐妹像启明星一样为虚拟歌手界的拂晓添上三点星光，为ai歌声合成的推广添上一缕希望">
-    <script src="https://jsdelivrcdn.suswhw.top/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://jsdelivrcdn.suswhw.top/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://jsdelivrcdn.suswhw.top/npm/jquery/dist/jquery.min.js"></script>
-    <script src="https://jsdelivrcdn.suswhw.top/npm/vue/dist/vue.global.js"></script>
+    <script src="https://jsd.anjiurine.top/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://jsd.anjiurine.top/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://jsd.anjiurine.top/npm/jquery/dist/jquery.min.js"></script>
+    <script src="https://jsd.anjiurine.top/npm/vue/dist/vue.global.js"></script>
     <script
-        src="https://jsdelivrcdn.suswhw.top/npm/bootstrap-autohidingnavbar/dist/jquery.bootstrap-autohidingnavbar.min.js"></script>
-    <script src="https://jsdelivrcdn.suswhw.top/npm/typed.js@2.0.12"></script>
+        src="https://jsd.anjiurine.top/npm/bootstrap-autohidingnavbar/dist/jquery.bootstrap-autohidingnavbar.min.js"></script>
+    <script src="https://jsd.anjiurine.top/npm/typed.js@2.0.12"></script>
     <script type="text/javascript"
         src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.10/jquery.lazy.min.js"></script>
     <script type="text/javascript"
         src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.10/jquery.lazy.plugins.min.js"></script>
-    <script src="https://jsdelivrcdn.suswhw.top/npm/vuetify/dist/vuetify.min.js"></script>
-    <link href="https://jsdelivrcdn.suswhw.top/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
-    <script src="https://jsdelivrcdn.suswhw.top/npm/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="https://jsdelivrcdn.suswhw.top/npm/masonry-layout/dist/masonry.pkgd.min.js"></script>
+    <script src="https://jsd.anjiurine.top/npm/vuetify/dist/vuetify.min.js"></script>
+    <link href="https://jsd.anjiurine.top/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
+    <script src="https://jsd.anjiurine.top/npm/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="https://jsd.anjiurine.top/npm/masonry-layout/dist/masonry.pkgd.min.js"></script>
     <link href="/css/main.css" rel="stylesheet">
     <script>
         $(function ($) {
